# TournamentSystemChooser

./: CMakeLists.txt  Player.h  README.md  RoundRobin.cpp  RoundRobin.h  SingleEliminationBracket.cpp  SingleEliminationBracket.h  Swiss.cpp  Swiss.h  TournamentSystem.cpp  TournamentSystem.h  main.cpp  pdfwriter.cpp
